fix alignment

--- a/public/style.css
+++ b/public/style.css
@@ -18,7 +18,7 @@ body {height: 100vh;}
     gap: 30px;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     height: -webkit-fill-available;
 }
 .first-container {
@@ -28,7 +28,7 @@ body {height: 100vh;}
     height: max-content;
     width: 250px;
     padding: 40px;
-    margin-bottom: 160px;
+    margin-bottom: 130px;
 }
 .logo {
     width: 120px;
